--- a/my-portfolio/app/app.css
+++ b/my-portfolio/app/app.css
@@ -11,14 +11,29 @@ body {
   flex-wrap: nowrap;
   justify-content: end;
   align-items: center;
-  gap: 3rem;
   text-decoration: none;
   color: black;
 }
 
 .nav__container a {
+  border: 1px solid transparent;
   text-decoration: none;
   color: black;
+  transition: all 0.3s ease;
+  padding: 0.5rem 0.8rem;
+  border-radius: 10px;
+  font-size: 1.2rem;
+  font-weight: normal;
+}
+
+.nav__container a.active {
+  background-color: #D9D9D980;
+  font-weight: bold;
+}
+
+.nav__container a:hover {
+  background-color: #D9D9D980;
+  font-weight: bold;
 }
 
 .banner {
