--- a/my-portfolio/app/app.css
+++ b/my-portfolio/app/app.css
@@ -5,6 +5,32 @@ body {
   background-color: white;
 }
 
+.page {
+  margin: 5rem 2rem;
+}
+
+h1 {
+  margin: 0.5rem;
+  font-size: 4rem;
+  color: white;
+}
+
+h2 {
+  text-align: center;
+  margin: 0;
+  font-size: 2.5rem;
+}
+
+h3 {
+  margin: 2rem 0 0 0;
+  font-size: 1.5rem;
+}
+
+h4 {
+  margin: 2rem 0 0 0;
+  font-size: 1.1rem;
+}
+
 .nav__container {
   margin: 2rem;
   display: flex;
@@ -15,7 +41,8 @@ body {
   color: black;
 }
 
-.nav__container a {
+.nav__container a,
+.buttons__sites a {
   border: 1px solid transparent;
   text-decoration: none;
   color: black;
@@ -31,9 +58,40 @@ body {
   font-weight: bold;
 }
 
-.nav__container a:hover {
+.nav__container a:hover,
+.buttons__sites a:hover {
   background-color: #D9D9D980;
   font-weight: bold;
+}
+
+.buttons__sites,
+.projects {
+  margin: 4rem 0;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
+  align-items: center;
+  text-decoration: none;
+  color: black;
+}
+
+.projects {
+  flex-wrap: wrap;
+  margin: 0;
+}
+
+.projects p,
+.projects h3,
+.projects div {
+  flex: 0 0 calc((100% - 2rem) / 3);
+  text-align: center;
+  margin-top: 2rem;
+}
+
+.projects__img {
+  position: relative;
+  max-width: 250px;
+  max-height: 250px;
 }
 
 .banner {
@@ -64,11 +122,7 @@ body {
   padding-left: 5rem;
 }
 
-h1 {
-  margin: 0.5rem;
-  font-size: 4rem;
-  color: white;
-}
+
 
 .perex {
   font-size: 1rem;
